--- a/index.html
+++ b/index.html
@@ -279,13 +279,39 @@
 
                   </div>
                 </div>
+                <div class="brands py-5">
+                  <div class="d-flex justify-content-center align-item-center  flex-wrap">
+                    <img src="assets/img/brand/1.png" alt="">
+                    <img src="assets/img/brand/2.png" alt="">
+                    <img src="assets/img/brand/3.png" alt="">
+                    <img src="assets/img/brand/4.png" alt="">
+                    <img src="assets/img/brand/5.png" alt="">
+                    <img src="assets/img/brand/6.png" alt="">
+
+                  </div>
+                </div>
+
               </div>
 
           
             
               </section>
-              <section id="section2">
 
+              <section id="section2" style="background-image: url(assets/img/bg-section-1.jpg); background-size: cover; background-position: center;">
+                 <div class="container">
+                  <div class="row">
+                    <div class="col-6">
+                      <div class="ratio ratio-16x9">
+                      <img src="assets/img/1.jpg" alt="">
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="ratio ratio-16x9">
+                        <img src="assets/img/1.jpg" alt="">
+                      </div>
+                    </div>
+                  </div>
+                 </div>
               </section>
               <section id="section3"></section>
         </main>
